crates/agent/src/integration_tests/snapshots/agent__integration_tests__schema_inference_limits__low_limit_shape.snap
---
source: crates/agent/src/integration_tests/schema_inference_limits.rs
expression: "serde_json::Value::from_str(&low_limit_spec).unwrap()"
---
{
  "$defs": {
    "flow://inferred-schema": {
      "$id": "flow://inferred-schema",
      "properties": {
        "_meta": {
          "properties": {
            "inferredSchemaIsNotAvailable": {
              "const": true,
              "description": "An inferred schema is not yet available because no documents have been written to this collection.\nThis place-holder causes document validations to fail at read time, so that the task can be updated once an inferred schema is ready."
            }
          },
          "required": [
            "inferredSchemaIsNotAvailable"
          ]
        }
      },
      "required": [
        "_meta"
      ]
    },
    "flow://relaxed-write-schema": {
      "$id": "flow://relaxed-write-schema",
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      },
      "type": "object",
      "x-infer-schema": {
        "x-inferred-schema-limit": 50
      }
    }
  },
  "allOf": [
    {
      "$ref": "flow://relaxed-write-schema"
    },
    {
      "$ref": "flow://inferred-schema"
    },
    {
      "x-inferred-schema-limit": 50
    }
  ]
}
